code/raw_code/cnn_enhancer_ortholog/logs/cnn_ocp_1006835_4.txt
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
